--- a/netlify.toml
+++ b/netlify.toml
@@ -1,14 +1,10 @@
 [build]
-  command = "npm run build"
+  base = "/"
   publish = "dist"
-  functions = "functions"
+  command = "npm run build"
 
 [build.environment]
   NODE_VERSION = "18"
 
 [context.production.environment]
   NODE_ENV = "production"
-
-[context.production.build]
-  command = "npm run build"
-  publish = "dist"
