--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,19 @@
 [build]
-  command = "npm run build"
+  base = "/"
   publish = "dist"
+  command = "npm run build"
 
 [build.environment]
   NODE_VERSION = "18"
+  VITE_BASE_URL = "/"
 
 [context.production.environment]
   NODE_ENV = "production"
+
+[context.production.build]
+  command = "npm run build"
+  publish = "dist"
+
+[context.production.environment]
+  NODE_ENV = "production"
+  VITE_BASE_URL = "/"
